CB-28708 Fix AWS native instance name collision
The check for already provisioned AWS native instances are extended with checking the cluster crn tag to prevent name collision between different stacks